--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <h1>¿Cómo estás?</h1>
     <section>
-      <p> Soy Leonela tengo 28 años soy <strong> ABOGADA y PROFESORA </strong> de nivel medio. Durante el 2020 empecé a incursionar en el mundo de la programación, tal es asi que realicé el curso de programación web Front End en "Potrero Digital". Hoy en día continuo aprendiendo de forma autodidácta. </p>
+      <p> Soy Leonela tengo 29 años soy <strong> ABOGADA y PROFESORA </strong> de nivel medio. Durante el 2020 empecé a incursionar en el mundo de la programación, tal es asi que realicé el curso de programación web Front End en "Potrero Digital". Hoy en día continuo aprendiendo de forma autodidácta. </p>
 
       <a href="  https://twitter.com/LCRusso2?t=an1YuIFBrhsZVjUrKbK4dQ&s=08  " target="_blank">
         <i class="fab fa-twitter"></i>
@@ -38,10 +38,10 @@
       <h3> <img class="foto1" src="img/imagen1.jpg" alt="imagen 1"></h3>
       <article class='course'>
         <div class='title'>
-          <h4>  ¿Por qué <strong> UALÁ </strong> para seguir aprendiendo? </h4>
+          <h4>  ¿Por qué <strong> CONTINUAR </strong> aprendiendo? </h4>
         </div>
         <div class="descrition">
-          <p> Porque confío en la tecnologia y en los beneficios que de ella se pueden obtener cuando se le brinda un servicio a la comunidad. En Ualá voy a aprender de la mano de los mejores.</p>
+          <p> Porque confío en la tecnologia y en los beneficios que de ella se pueden obtener cuando se le brinda un servicio a la comunidad. Y en el dia de mañana ofrecer mis servicios jurídicos de forma 100% virtual.</p>
         </div>
       </article>
       <article class='course'>
@@ -49,7 +49,7 @@
 
         </div>
         <div class="descrition">
-          <p>   Porque creo en la inclusión financiera y en facilitar el acceso a ella. Esta seria una gran oportunidad para poner en práctica mis habilidades para el trabajo en equipo, la escucha y el apoyo colaborativo  .</p>
+          <p>   Porque creo en la tecnologia y en facilitar el acceso a ella .</p>
         </div>
       </article>
       <br/>
