--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h4>  ¿Por qué <strong> CONTINUAR </strong> aprendiendo? </h4>
         </div>
         <div class="descrition">
-          <p> Porque confío en la tecnologia y en los beneficios que de ella se pueden obtener cuando se le brinda un servicio a la comunidad. Y en el dia de mañana ofrecer mis servicios jurídicos de forma 100% virtual.</p>
+          <p> Porque confío en la tecnología y en los beneficios que de ella se pueden obtener cuando se le brinda un servicio a la comunidad, pero además porque en el dia de mañana me gustaría ofrecer mis servicios jurídicos de forma 100% virtual.</p>
         </div>
       </article>
       <article class='course'>
@@ -49,7 +49,7 @@
 
         </div>
         <div class="descrition">
-          <p>   Porque creo en la tecnologia y en facilitar el acceso a ella .</p>
+          <p> El verdadero cambio se logrará impulsando el uso de la tecnología .</p>
         </div>
       </article>
       <br/>
